--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,11 @@
+server.port=8082
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url= jdbc:mysql://localhost:3306/practice
+spring.datasource.username=root
+spring.datasource.password=password
 
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.mvc.pathmatch.matching-strategy=ant-path-matcher
+
+spring.jpa.hibernate.ddl-auto=update
